Install project via uv build backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,7 @@ ignore = [
 quote-style = "double"
 indent-style = "space"
 docstring-code-format = true
+
+[build-system]
+requires = ["uv_build>=0.9.9,<0.10.0"]
+build-backend = "uv_build"
