--- a/electron/package.json
+++ b/electron/package.json
@@ -15,6 +15,7 @@
     "electron-builder": "^25.1.8"
   },
   "dependencies": {
-    "get-port": "^7.1.0"
+    "get-port": "^7.1.0",
+    "toml": "^3.0.0"
   }
 }
