--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ electron/node_modules/
 electron/dist/
 electron/django-bundle/
 electron/.python-downloads/
+
+# GitHub artifacts
+dist-artifacts/
