--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -6,5 +6,7 @@ build:
 python:
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+      path: .
 sphinx:
   configuration: docs/conf.py
