--- a/.github/workflows/electron-desktop.yml
+++ b/.github/workflows/electron-desktop.yml
@@ -65,4 +65,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: djdesk-${{ matrix.artifact }}
-          path: electron/dist
+          path: electron/dist/DJDesk-*
