--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "django>=5.2.8",
+    "django-tasks>=0.9.0",
 ]
 
 [project.optional-dependencies]
